syntax = "proto3";

package acmelib.v1;

import "acmelib/v1/entity.proto";

message SignalEnum {
    acmelib.v1.Entity entity = 1;

    repeated SignalEnumValue values = 2;
    uint32 min_size = 3;
}

message SignalEnumValue {
    acmelib.v1.Entity entity = 1;

    uint32 index = 2;
}